# task-management-system-server

./: README.md  app.py  pyproject.toml  tests.py
documentation/: architecture.txt  project management.txt  requirement documentation.txt
src/: __init__.py  main.py
src/fastapi_interface/: main.py  services.py
src/task_manager/: __dependencies.py  __init__.py
src/task_manager/__db/: config.py  database.py  dependencies.py  schema.py  service.py  types.py
src/task_manager/__db/model/: __init__.py  user.py
src/task_manager/utils/: decorators.py
